# korea-adapter-sdk-ls

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONCEPTS.md  CONTEXT.md  Cargo.toml  Makefile  README.md  TR_LIFECYCLE.md  USER_GUIDE.md
adapters/nautilus/: .gitignore  Cargo.toml  README.md
adapters/nautilus/src/: config.rs  data.rs  error.rs  execution.rs  factories.rs  instruments.rs  lib.rs  lock.rs  rules.rs  scrub.rs
adapters/nautilus/src/ingest/: checkpoint.rs  mod.rs  pacer.rs
adapters/nautilus/src/orders/: chain.rs  map.rs  mod.rs
adapters/nautilus/src/ws/: mod.rs  rows.rs  supervisor.rs
adapters/nautilus/tests/: backtest_e2e.rs  data_client.rs  execution_client.rs  ingest.rs  instruments.rs  node_wiring.rs
crates/ls-core/: Cargo.toml  build.rs
crates/ls-core/src/: auth.rs  client.rs  config.rs  config_resolve.rs  embedded.rs  endpoint_policy.rs  error.rs  error_catalog.rs  inner.rs  lib.rs  order_dedup.rs  pagination.rs  parse.rs  preflight.rs  rate_limiter.rs
crates/ls-core/src/endpoint_policy/: auth.rs  chart_reference.rs  market_data.rs  mod.rs  order.rs  realtime_md.rs  realtime_order.rs
crates/ls-core/tests/: constraint_grounding.rs  policy_index_crosscheck.rs
crates/ls-docgen/: Cargo.toml
crates/ls-docgen/src/: lib.rs  main.rs
crates/ls-docgen/tests/: determinism.rs
crates/ls-metadata/: Cargo.toml
crates/ls-metadata/src/: constraints.rs  freshness.rs  lib.rs  planner.rs  schema.rs  shape.rs  validator.rs
crates/ls-metadata/tests/: slice_metadata.rs
crates/ls-sdk/: Cargo.toml
crates/ls-sdk-test-support/: Cargo.toml
crates/ls-sdk-test-support/src/: lib.rs  mock_http.rs  mock_ws.rs  secrets.rs
crates/ls-sdk/src/: lib.rs
crates/ls-sdk/src/account/: balance.rs  capacity.rs  holdings.rs  mod.rs
crates/ls-sdk/src/market_session/: charts.rs  elw.rs  etf.rs  investor_flow.rs  masters.rs  mod.rs  quote.rs  quote_deriv.rs  ranking.rs  reference.rs
crates/ls-sdk/src/orders/: futureoption.rs  mod.rs  overseas_futureoption.rs  reconcile.rs
crates/ls-sdk/src/paginated/: breadth_board.rs  chart.rs  designation_board.rs  exchange_broker.rs  expected_conclusion.rs  fo_daily_chart.rs  fo_investor_time.rs  historical_chart.rs  invest_opinion.rs  investor.rs  item_search.rs  low_liquidity.rs  mod.rs  overseas_futures_chart.rs  overseas_index.rs  program_flow.rs  rank_screen.rs  sector_index.rs  tick_conclusion.rs
crates/ls-sdk/src/realtime/: connection.rs  dispatch.rs  frame.rs  mod.rs  overflow.rs  stream.rs
crates/ls-sdk/src/realtime/frame/: ws_events.rs  ws_rows_batch.rs  ws_rows_open.rs  ws_trades.rs
crates/ls-sdk/src/standalone/: mod.rs
crates/ls-sdk/tests/: account_tests.rs  live_smoke.rs  market_session_tests.rs  negative_probe.rs  order_logic_gate.rs  order_smoke.rs  orders_tests.rs  paginated_tests.rs  realtime_tests.rs  standalone_tests.rs
crates/ls-sdk/tests/account/: balance.rs  capacity.rs  holdings.rs
crates/ls-sdk/tests/fixtures/: CCENQ10100_resp.json  CCENQ90200_resp.json  CFOAQ10100_resp.json  CFOBQ10500_resp.json  CFOEQ11100_resp.json  CIDBQ01400_resp.json  CIDBQ03000_resp.json  CIDBQ05300_resp.json  CLNAQ00100_resp.json  CSPAQ12200_resp.json  CSPAQ12300_resp.json  CSPAQ22200_resp.json  CSPBQ00200_resp.json  t0167_resp.json  t0424_resp.json  t0441_resp.json  t1101_resp.json  t1102_resp.json  t1310_resp.json  t1404_resp.json  t1410_resp.json  t1411_resp.json  t1452_resp.json  t1485_resp.json  t1488_resp.json  t1511_resp.json  t1514_resp.json  t1516_resp.json  t1531_resp.json  t1537_resp.json  t1636_resp.json  t1809_resp.json  t2301_resp.json  t2522_resp.json  t3202_resp.json  t3401_resp.json  t4203_resp.json  t8401_resp.json  t8410_resp.json  t8412_resp.json  (+12 more)
crates/ls-sdk/tests/live/: account.rs  market_session_charts.rs  market_session_flow.rs  market_session_masters.rs  market_session_price.rs  paginated_boards.rs  paginated_misc.rs  realtime.rs
crates/ls-sdk/tests/market_session/: charts.rs  elw.rs  etf.rs  investor_flow.rs  masters.rs  quote.rs  quote_deriv.rs  ranking.rs  reference.rs
crates/ls-sdk/tests/order/: chain.rs  fo.rs  overseas_fo.rs
crates/ls-sdk/tests/paginated/: breadth_board.rs  chart.rs  designation_board.rs  exchange_broker.rs  expected_conclusion.rs  fo_daily_chart.rs  fo_investor_time.rs  historical_chart.rs  invest_opinion.rs  investor.rs  item_search.rs  low_liquidity.rs  overseas_futures_chart.rs  overseas_index.rs  program_flow.rs  rank_screen.rs  sector_index.rs  tick_conclusion.rs
crates/ls-trackers/: Cargo.toml
crates/ls-trackers/baselines/api-drift/: SEED-ATTESTATION.md  code-set.json  promotion-log.jsonl
crates/ls-trackers/baselines/api-drift/normalized/: manifest.json
crates/ls-trackers/baselines/api-drift/normalized/trs/: AFR.json  AS0.json  AS1.json  AS2.json  AS3.json  AS4.json  B7_.json  BMT.json  BM_.json  C01.json  C02.json  CCENQ10100.json  CCENQ90200.json  CCENT00100.json  CCENT00200.json  CCENT00300.json  CD0.json  CFOAQ10100.json  CFOAT00100.json  CFOAT00200.json  CFOAT00300.json  CFOBQ10500.json  CFOEQ11100.json  CIDBQ01400.json  CIDBQ03000.json  CIDBQ05300.json  CIDBT00100.json  CIDBT00900.json  CIDBT01000.json  CLNAQ00100.json  COSAT00301.json  COSAT00311.json  COSAT00400.json  COSMT00300.json  CSPAQ12200.json  CSPAQ12300.json  CSPAQ22200.json  CSPAT00601.json  CSPAT00701.json  CSPAT00801.json  (+280 more)
crates/ls-trackers/baselines/spec-doc/: SEED-ATTESTATION.md
crates/ls-trackers/baselines/spec-doc/normalized/: examples.json  manifest.json
crates/ls-trackers/src/: api_drift.rs  cli.rs  fetch.rs  freshness.rs  lib.rs  main.rs  spec_doc.rs  stages.rs  types.rs
crates/ls-trackers/tests/: api_drift.rs  classify.rs  decommission_audit.rs  spec_doc.rs
crates/ls-trackers/tests/fixtures/: t1102_example_baseline.json  t1102_example_candidate.json  t8412_baseline.json  t8412_candidate.json  token_example_baseline.json  token_example_candidate.json
docs/: MAINTENANCE_RUNBOOK.md  maintenance-labels.md  migration-source-extraction-ledger.md
metadata/: EVIDENCE-FRESHNESS.md  PROVISIONALITY-LEDGER.md  error-catalog.yaml  tr-index.yaml
(+1155 files in other folders)
