[package]
name = "nautilus-ls"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
description = "nautilus_trader v2 (Rust) adapter for LS Securities (Korea) domestic KRX equities, layered over ls-sdk."
publish = false

# Standalone workspace: opt out of the root SDK workspace (Rust 1.75 / edition 2021)
# so this adapter can pin nautilus's Rust 1.96 / edition 2024 toolchain with zero
# edits to the six SDK crates or the root Cargo.toml. See KTD1.
[workspace]
members = ["."]

[lib]
name = "nautilus_ls"
path = "src/lib.rs"

[[bin]]
name = "ls-ingest"
path = "src/bin/ls-ingest.rs"

[[bin]]
name = "node_data_tester"
path = "src/bin/node_data_tester.rs"

[[bin]]
name = "node_exec_tester"
path = "src/bin/node_exec_tester.rs"

[dependencies]
# SDK — consumed by path, unchanged. ls-core supplies EndpointPolicy metadata + LsConfig.
ls-sdk = { path = "../../crates/ls-sdk" }
ls-core = { path = "../../crates/ls-core" }

# nautilus_trader v2 (Rust), pinned lockstep at =0.60.0 (KTD2).
nautilus-core = "=0.60.0"
nautilus-model = "=0.60.0"
nautilus-common = "=0.60.0"
nautilus-live = "=0.60.0"
nautilus-persistence = "=0.60.0"
nautilus-backtest = "=0.60.0"

# Runtime + serde. tokio/serde versions are independent of the SDK workspace pins.
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
ustr = "1"
rust_decimal = "1"
ahash = "0.8"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
ls-sdk-test-support = { path = "../../crates/ls-sdk-test-support" }
tempfile = "3"
# Strategy macros (`nautilus_strategy!`, `StrategyCore`) for the throwaway backtest
# placeholder strategy in tests/backtest_e2e.rs. Test-only, never shipped (KTD3 scope).
nautilus-trading = "=0.60.0"
wiremock = "0.6"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
