[package]
name = "ls-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Maintained public SDK surface for the LS Securities Open API, organized by dependency class."

[dependencies]
ls-core = { path = "../ls-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
dashmap.workspace = true
# Order reconciliation evidence record: HMAC-SHA256 keyed account/request hashes.
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
ls-sdk-test-support = { path = "../ls-sdk-test-support" }
wiremock.workspace = true
tokio.workspace = true
serde_json.workspace = true
# Used only by the credential-safe raw-HTTP failure-classifier probe in
# tests/live_smoke.rs (`raw_http_probe`); bypasses the SDK's typed deserialize.
reqwest.workspace = true
