[package]
name = "ls-trackers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Staged-snapshot change trackers: normalize/diff/classify LS API drift into support-aware advisory findings."

[[bin]]
name = "ls-trackers"
path = "src/main.rs"

[dependencies]
ls-metadata = { path = "../ls-metadata" }
serde.workspace = true
serde_json.workspace = true
scraper.workspace = true
# Timestamping staged-run directories (`api-drift fetch`). Default features only.
chrono.workspace = true
# The workspace `reqwest` pin omits `blocking`; declare the per-crate feature
# union here so the tracker CLI uses a synchronous client (matching `ls-docgen`'s
# no-`#[tokio::main]` shape) without touching other crates.
reqwest = { workspace = true, features = ["blocking"] }
# The `freshness re-pin` path reads and rewrites the per-TR Focused Evidence YAML
# to upsert the attested shape (R11). Already a workspace dependency (ls-metadata),
# pinned in Cargo.lock, so this adds no new transitive dependency.
serde_yaml.workspace = true

[dev-dependencies]
httpmock.workspace = true
